[ ] May break build [x] Breaks existing applications [ ] Bugfix [ ] New Feature [x] Cleanup [ ] Optimization [x] Documentation
Description: Cleanup file format: tokens are upper-case, update existing
             configs, update documentation

--- a/Presentations/images/UseCases.graffle/data.plist
+++ b/Presentations/images/UseCases.graffle/data.plist
@@ -1941,7 +1941,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>621</integer>
+					<integer>852</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -1968,7 +1968,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>630</integer>
+						<integer>861</integer>
 					</dict>
 				</dict>
 				<dict>
@@ -1979,10 +1979,10 @@
 					<key>Head</key>
 					<dict>
 						<key>ID</key>
-						<integer>640</integer>
+						<integer>871</integer>
 					</dict>
 					<key>ID</key>
-					<integer>622</integer>
+					<integer>853</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2010,7 +2010,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>631</integer>
+						<integer>862</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2021,7 +2021,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>623</integer>
+					<integer>854</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2048,7 +2048,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>628</integer>
+						<integer>859</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2061,12 +2061,12 @@
 					<key>Head</key>
 					<dict>
 						<key>ID</key>
-						<integer>640</integer>
+						<integer>871</integer>
 						<key>Info</key>
 						<integer>2</integer>
 					</dict>
 					<key>ID</key>
-					<integer>624</integer>
+					<integer>855</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2095,7 +2095,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>629</integer>
+						<integer>860</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2106,7 +2106,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>625</integer>
+					<integer>856</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2133,7 +2133,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>633</integer>
+						<integer>864</integer>
 					</dict>
 				</dict>
 				<dict>
@@ -2142,7 +2142,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>626</integer>
+					<integer>857</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2171,7 +2171,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>632</integer>
+						<integer>863</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2182,7 +2182,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>627</integer>
+					<integer>858</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2211,7 +2211,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>634</integer>
+						<integer>865</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2222,7 +2222,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>628</integer>
+					<integer>859</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2276,7 +2276,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>629</integer>
+					<integer>860</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2330,7 +2330,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>630</integer>
+					<integer>861</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2384,7 +2384,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>631</integer>
+					<integer>862</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2438,7 +2438,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>632</integer>
+					<integer>863</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2492,7 +2492,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>633</integer>
+					<integer>864</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2546,7 +2546,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>634</integer>
+					<integer>865</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2600,7 +2600,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>635</integer>
+					<integer>866</integer>
 					<key>ImageID</key>
 					<integer>3</integer>
 					<key>Magnets</key>
@@ -2654,7 +2654,7 @@
 					<key>Class</key>
 					<string>LineGraphic</string>
 					<key>ID</key>
-					<integer>636</integer>
+					<integer>867</integer>
 					<key>OrthogonalBarAutomatic</key>
 					<false/>
 					<key>OrthogonalBarPosition</key>
@@ -2681,7 +2681,7 @@
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>635</integer>
+						<integer>866</integer>
 						<key>Info</key>
 						<integer>4</integer>
 					</dict>
@@ -2692,7 +2692,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>637</integer>
+					<integer>868</integer>
 					<key>ImageID</key>
 					<integer>26</integer>
 					<key>Magnets</key>
@@ -2702,10 +2702,12 @@
 						<string>{1, 0}</string>
 						<string>{-1, 0}</string>
 					</array>
+					<key>ManualSizeImage</key>
+					<string>YES</string>
+					<key>Offset</key>
+					<string>{-0.45, -0.0266667}</string>
 					<key>Opacity</key>
 					<real>0.5</real>
-					<key>Scale</key>
-					<real>0.40000000596046448</real>
 					<key>Shape</key>
 					<string>Bezier</string>
 					<key>ShapeData</key>
@@ -2746,7 +2748,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>638</integer>
+					<integer>869</integer>
 					<key>ImageID</key>
 					<integer>23</integer>
 					<key>Magnets</key>
@@ -2787,11 +2789,11 @@
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{42.5199, 864.569}, {396.851, 141.732}}</string>
+					<string>{{42.5197, 864.567}, {396.851, 141.732}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>639</integer>
+					<integer>870</integer>
 					<key>ImageID</key>
 					<integer>24</integer>
 					<key>Magnets</key>
@@ -2801,6 +2803,12 @@
 						<string>{1, 0}</string>
 						<string>{-1, 0}</string>
 					</array>
+					<key>ManualSizeImage</key>
+					<string>YES</string>
+					<key>Offset</key>
+					<string>{-0.0266667, -0.346667}</string>
+					<key>Scale</key>
+					<real>0.89999997615814209</real>
 					<key>Shape</key>
 					<string>Bezier</string>
 					<key>ShapeData</key>
@@ -2836,7 +2844,7 @@
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>640</integer>
+					<integer>871</integer>
 					<key>ImageID</key>
 					<integer>21</integer>
 					<key>Magnets</key>
@@ -2866,7 +2874,7 @@
 				</dict>
 			</array>
 			<key>ID</key>
-			<integer>620</integer>
+			<integer>851</integer>
 		</dict>
 		<dict>
 			<key>Bounds</key>
@@ -8012,34 +8020,34 @@
 	</array>
 	<key>ImageList</key>
 	<array>
-		<string>image7.png</string>
-		<string>image3.pdf</string>
-		<string>image39.rgb</string>
+		<string>image47.tiff</string>
+		<string>image46.tiff</string>
+		<string>image45.tiff</string>
+		<string>image44.tiff</string>
+		<string>image43.tiff</string>
+		<string>image42.rgb</string>
 		<string>image41.rgb</string>
+		<string>image40.rgb</string>
+		<string>image39.rgb</string>
+		<string>image38.rgb</string>
+		<string>image37.png</string>
 		<string>image36.png</string>
 		<string>image35.png</string>
-		<string>image38.rgb</string>
 		<string>image34.png</string>
 		<string>image33.png</string>
-		<string>image42.rgb</string>
-		<string>image40.rgb</string>
-		<string>image11.JPG</string>
-		<string>image37.png</string>
 		<string>image26.png</string>
-		<string>image23.png</string>
 		<string>image24.png</string>
+		<string>image23.png</string>
 		<string>image21.png</string>
 		<string>image19.pdf</string>
-		<string>image47.tiff</string>
-		<string>image45.tiff</string>
-		<string>image46.tiff</string>
-		<string>image43.tiff</string>
-		<string>image44.tiff</string>
-		<string>image4.pdf</string>
 		<string>image12.png</string>
+		<string>image11.JPG</string>
 		<string>image10.JPG</string>
 		<string>image9.pdf</string>
 		<string>image8.pdf</string>
+		<string>image7.png</string>
+		<string>image4.pdf</string>
+		<string>image3.pdf</string>
 		<string>image2.png</string>
 	</array>
 	<key>IsPalette</key>
@@ -8140,7 +8148,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-01-05 18:42:29 +0100</string>
+	<string>2007-03-14 16:00:18 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -8207,25 +8215,17 @@
 	<key>WindowInfo</key>
 	<dict>
 		<key>CurrentSheet</key>
-		<string>0</string>
-		<key>DrawerOpen</key>
-		<false/>
+		<integer>0</integer>
 		<key>DrawerTab</key>
 		<string>Outline</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
-		<key>FitInWindow</key>
-		<true/>
 		<key>Frame</key>
-		<string>{{123, 53}, {1169, 878}}</string>
-		<key>ShowRuler</key>
-		<false/>
-		<key>ShowStatusBar</key>
-		<true/>
+		<string>{{311, 121}, {1333, 1032}}</string>
 		<key>VisibleRegion</key>
-		<string>{{-37, 0}, {2118.63, 1432}}</string>
+		<string>{{0, -9.99997}, {2083, 1476.12}}</string>
 		<key>Zoom</key>
-		<string>0.6808659</string>
+		<real>0.79092651605606079</real>
 	</dict>
 </dict>
 </plist>
