[ ] May break build [ ] Breaks existing applications [ ] Bugfix [ ] New Feature [ ] Cleanup [ ] Optimization [x] Documentation
Description: 
  Some unfinished update of the flyer

--- a/Presentations/images/2D.graffle/data.plist
+++ b/Presentations/images/2D.graffle/data.plist
@@ -159,16 +159,21 @@
 			<false/>
 			<key>Class</key>
 			<string>LineGraphic</string>
+			<key>Head</key>
+			<dict>
+				<key>ID</key>
+				<integer>26</integer>
+			</dict>
 			<key>ID</key>
 			<integer>22</integer>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>-1</real>
+			<real>20.346649169921875</real>
 			<key>Points</key>
 			<array>
-				<string>{106.299, 624.122}</string>
-				<string>{283.465, 651.969}</string>
+				<string>{106.299, 623.622}</string>
+				<string>{361.583, 680.315}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -205,10 +210,10 @@
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>12.1964111328125</real>
+			<real>12.446624755859375</real>
 			<key>Points</key>
 			<array>
-				<string>{616.535, 624.122}</string>
+				<string>{616.536, 623.622}</string>
 				<string>{361.583, 680.315}</string>
 			</array>
 			<key>Style</key>
@@ -236,16 +241,21 @@
 			<false/>
 			<key>Class</key>
 			<string>LineGraphic</string>
+			<key>Head</key>
+			<dict>
+				<key>ID</key>
+				<integer>26</integer>
+			</dict>
 			<key>ID</key>
 			<integer>20</integer>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>-1</real>
+			<real>20.346649169921875</real>
 			<key>Points</key>
 			<array>
-				<string>{446.457, 623.622}</string>
-				<string>{439.37, 651.969}</string>
+				<string>{446.456, 623.622}</string>
+				<string>{361.583, 680.315}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -274,16 +284,21 @@
 			<false/>
 			<key>Class</key>
 			<string>LineGraphic</string>
+			<key>Head</key>
+			<dict>
+				<key>ID</key>
+				<integer>26</integer>
+			</dict>
 			<key>ID</key>
 			<integer>19</integer>
 			<key>OrthogonalBarAutomatic</key>
 			<true/>
 			<key>OrthogonalBarPosition</key>
-			<real>-1</real>
+			<real>20.346649169921875</real>
 			<key>Points</key>
 			<array>
-				<string>{276.378, 624.122}</string>
-				<string>{368.504, 651.969}</string>
+				<string>{276.378, 623.622}</string>
+				<string>{361.583, 680.315}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -738,7 +753,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-01-30 18:13:35 +0100</string>
+	<string>2007-03-24 17:41:38 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
