--- a/Presentations/FlyerBack.graffle/data.plist
+++ b/Presentations/FlyerBack.graffle/data.plist
@@ -30,6 +30,81 @@
 	<key>GraphicsList</key>
 	<array>
 		<dict>
+			<key>AllowConnections</key>
+			<string>NO</string>
+			<key>Bounds</key>
+			<string>{{14.1732, 524.409}, {240.945, 42.5191}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>762</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>CornerRadius</key>
+					<real>4</real>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
+{\fonttbl\f0\fnil\fcharset77 Georgia-Bold;\f1\fswiss\fcharset77 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qc\pardirnatural
+
+\f0\b\fs24 \cf0 \expnd0\expndtw0\kerning0
+Use Cases
+\f1\b0\fs20 \
+Display Wall (top), Scalable Rendering (middle), Virtual Reality Installation (bottom)}</string>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Bounds</key>
+			<string>{{14.1731, 354.331}, {240.945, 155.906}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>761</integer>
+			<key>ImageID</key>
+			<integer>3</integer>
+			<key>ManualSizeImage</key>
+			<string>YES</string>
+			<key>Offset</key>
+			<string>{-0, -0.08}</string>
+			<key>Scale</key>
+			<real>0.15000000596046448</real>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>stroke</key>
+				<dict>
+					<key>CornerRadius</key>
+					<real>4</real>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
 			<key>Bounds</key>
 			<string>{{609.442, 297.637}, {184.252, 42.5193}}</string>
 			<key>Class</key>
@@ -225,7 +300,7 @@ Scene Graphs\
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\fs24 \cf0 OpenGL, Xdmx and System Libraries}</string>
+\f0\fs24 \cf0 OpenGL and other System Libraries}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -356,7 +431,7 @@ Scene Graphs\
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\fs24 \cf0 HPV Applications\
+\f0\fs24 \cf0 Parallel Applications\
 \
 \
 \
@@ -577,7 +652,7 @@ Scene Graphs\
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 14.1732}, {240.945, 155.906}}</string>
+			<string>{{14.1732, 14.1727}, {240.945, 155.906}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -587,7 +662,7 @@ Scene Graphs\
 			<key>ManualSizeImage</key>
 			<string>YES</string>
 			<key>Scale</key>
-			<real>0.11999999731779099</real>
+			<real>0.12999999523162842</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -603,7 +678,7 @@ Scene Graphs\
 			<key>AllowConnections</key>
 			<string>NO</string>
 			<key>Bounds</key>
-			<string>{{297.638, 14.1732}, {240.945, 552.756}}</string>
+			<string>{{297.638, 297.638}, {240.945, 269.291}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>HFlip</key>
@@ -638,55 +713,39 @@ Scene Graphs\
 				<integer>0</integer>
 				<key>Text</key>
 				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fnil\fcharset77 Georgia-Bold;\f1\fswiss\fcharset77 Helvetica;\f2\fswiss\fcharset77 Helvetica-Bold;
-}
+{\fonttbl\f0\fnil\fcharset77 Georgia-Bold;\f1\fswiss\fcharset77 Helvetica;\f2\fswiss\fcharset77 Helvetica-Oblique;
+\f3\fswiss\fcharset77 Helvetica-Bold;}
 {\colortbl;\red255\green255\blue255;}
-{\*\listtable{\list\listtemplateid1\listhybrid{\listlevel\levelnfc23\levelnfcn23\leveljc2\leveljcn2\levelfollow0\levelstartat1\levelspace360\levelindent0{\*\levelmarker \{disc\}}{\leveltext\leveltemplateid0\'02\'05.;}{\levelnumbers\'01;}}{\listname ;}\listid1}
-{\list\listtemplateid2\listhybrid{\listlevel\levelnfc23\levelnfcn23\leveljc2\leveljcn2\levelfollow0\levelstartat1\levelspace360\levelindent0{\*\levelmarker \{disc\}}{\leveltext\leveltemplateid0\'02\'05.;}{\levelnumbers\'01;}}{\listname ;}\listid2}}
-{\*\listoverridetable{\listoverride\listid1\listoverridecount0\ls1}{\listoverride\listid2\listoverridecount0\ls2}}
+{\*\listtable{\list\listtemplateid1\listhybrid{\listlevel\levelnfc23\levelnfcn23\leveljc2\leveljcn2\levelfollow0\levelstartat1\levelspace360\levelindent0{\*\levelmarker \{disc\}}{\leveltext\leveltemplateid0\'02\'05.;}{\levelnumbers\'01;}}{\listname ;}\listid1}}
+{\*\listoverridetable{\listoverride\listid1\listoverridecount0\ls1}}
 \deftab720
 \pard\pardeftab720\sa380\qc
 
-\f0\b\fs24 \cf0 Programming Interface\
+\f0\b\fs24 \cf0 Parallel Programming Interface
+\fs18 \
 \pard\pardeftab720\sa380\qj
 
-\f1\b0\fs20 \cf0 Equalizer uses a callback-driven programming model. where the application provides their rendering methods, which are called by the Equalizer framework according to the current configuration. Process and thread creation, task synchronization and network connections are externalized from the application and handled by the Equalizer framework.\
-\pard\pardeftab720\sa320\qj
-\cf0 The multipipe programming interface follows the natural execution model of any multipipe application. The application needs to separate the rendering routines from the core application to make them distributable. Equalizer abstracts common graphic entities into C++ classes, for example:\
+\f1\b0\fs20 \cf0 Equalizer uses a 
+\f2\i minimally invasive
+\f1\i0  programming interface. Most of the application is retained, only the relevant part are separated and plugged into the Equalizer API to be parallelized. Process and thread creation, task synchronization and network connections are externalized from the application and handled by Equalizer. Common graphic entities are abstracted by C++ classes, for example:\
 \pard\tx220\tx720\pardeftab720\li720\fi-720\qj
 \ls1\ilvl0
-\f2\b \cf0  \'a5 Node
+\f3\b \cf0  \'a5 Node
 \f1\b0  - a single computer in the cluster\
 \ls1\ilvl0
-\f2\b  \'a5 Pipe
+\f3\b  \'a5 Pipe
 \f1\b0  - a graphics card and rendering thread\
 \ls1\ilvl0
-\f2\b  \'a5 Window
+\f3\b  \'a5 Window
 \f1\b0  - an OpenGL drawable\
 \ls1\ilvl0
-\f2\b  \'a5 Channel
+\f3\b  \'a5 Channel
 \f1\b0  - a viewport within a window\
 \
 \pard\pardeftab720\qj
-\cf0 The application subclasses these entities, and overrides methods to provide the application's rendering code. Each method corresponds to a task, and for all of them Equalizer provides a default method which implements the typical use case. This allows a quick start for the developer, which can replace the defaults gradually with his own code. Some of the most important methods are:\
-\
-\pard\tx220\tx720\pardeftab720\li720\fi-720\qj
-\ls2\ilvl0
-\f2\b \cf0  \'a5 Channel::draw
-\f1\b0  - render using the provided frustum, \
-    viewport and range\
-\ls2\ilvl0
-\f2\b  \'a5 Window::init
-\f1\b0  - initialize OpenGL drawable and state\
-\ls2\ilvl0
-\f2\b  \'a5 Pipe::startFrame
-\f1\b0  - update frame-specific data\
-\ls2\ilvl0
-\f2\b  \'a5 Node::init
-\f1\b0  - initialize per node application data\
-\
-\pard\pardeftab720\sa320\qj
-\cf0 Equalizer provides an API to build network-distributed applications. In contrast to other cluster API's, such as MPI or PVM, this API is designed for the development of interactive applications. Certain characteristics of visualization software, e.g. the frame-driven rendering, are exploited for better performance and simpler programming interface.}</string>
+\cf0 The application amends these entities with it's rendering code by implementing 
+\f2\i task-specific
+\f1\i0  methods. Equalizer simplifies application porting by providing a default implementation for each task, which implements the typical use case.}</string>
 			</dict>
 			<key>TextPlacement</key>
 			<integer>0</integer>
@@ -797,24 +856,22 @@ Scene Graphs\
 \f0\b\fs24 \cf0 Resource Management\
 \pard\pardeftab720\sa320\qj
 
-\f1\b0\fs20 \cf0 Equalizer uses a configuration server to optimally allocate and balance the available resources on the visualization system. The server is configured using a hierarchically structured configuration file to describe the available resources, and the combination of the resources for rendering. Equalizer applications can also run without a server, in which case they will automatically configure themselves for the local workstation. The central resource management enables system-wide resource reservation, allocation and scheduling, as well as the integration with other cluster scheduling software.}</string>
+\f1\b0\fs20 \cf0 Equalizer uses a system-wide configuration server to optimally allocate and balance the available resources on the visualization system. The server is configured using a hierarchically structured configuration file to describe the available resources, and the combination of the resources for rendering. Equalizer applications can also run without a server, in which case they will automatically configure themselves for the local workstation. The central resource management enables system-wide resource reservation, allocation and scheduling, as well as the integration with other cluster scheduling software.}</string>
 			</dict>
 			<key>TextPlacement</key>
 			<integer>0</integer>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 184.252}, {240.945, 155.906}}</string>
+			<string>{{14.1732, 184.252}, {240.945, 155.905}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
 			<integer>18</integer>
 			<key>ImageID</key>
-			<integer>2</integer>
-			<key>ManualSizeImage</key>
-			<string>YES</string>
+			<integer>5</integer>
 			<key>Scale</key>
-			<real>0.15000000596046448</real>
+			<real>0.10999999940395355</real>
 			<key>Shape</key>
 			<string>Rectangle</string>
 			<key>Style</key>
@@ -830,7 +887,7 @@ Scene Graphs\
 			<key>AllowConnections</key>
 			<string>NO</string>
 			<key>Bounds</key>
-			<string>{{14.1732, 354.331}, {240.945, 212.598}}</string>
+			<string>{{297.638, 14.1736}, {240.945, 283.464}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -872,32 +929,29 @@ Scene Graphs\
 Use Cases
 \f1\b0\fs20 \
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
-\cf0 Equalizer abstracts the configuration from the application code. This allows the same application to be deployed in many different ways, for example: 
+\cf0 \expnd0\expndtw0\kerning0
+\
+Equalizer abstracts the configuration from the application. This allows the same application to be deployed in many different ways, for example: 
 \f2\b \expnd0\expndtw0\kerning0
 \
 Display Walls 
 \f1\b0 \expnd0\expndtw0\kerning0
-are driven by Equalizer by running an OpenGL execution thread locally on each node.
+are one of the most common use case for visualization clusters today. The typical configur-ation, as shown on the left, executes one instance of the application's rendering code for each display.
 \f2\b \expnd0\expndtw0\kerning0
 \
-Immersive Installations 
+Virtual Reality Installations 
 \f1\b0 \expnd0\expndtw0\kerning0
 use passive or active stereo rendering with head tracking, both supported by Equalizer.
 \f2\b \expnd0\expndtw0\kerning0
 \
-Multipipe Workstations
-\f1\b0 \expnd0\expndtw0\kerning0
- are an affordable way to scale the rendering performance and display size. 
-\f2\b \expnd0\expndtw0\kerning0
-\
-Remote Visualization Clusters 
-\f1\b0 \expnd0\expndtw0\kerning0
-are a cost-efficient way of centralizing large scale data. \
-
-\f2\b \expnd0\expndtw0\kerning0
 Scalable Rendering
 \f1\b0 \expnd0\expndtw0\kerning0
- is used to parallelize the rendering of a single view across multiple graphic cards and processors.}</string>
+ parallelizes the rendering of a single view across multiple graphic cards, processors and potentially computers to render more data faster.\
+
+\f2\b \expnd0\expndtw0\kerning0
+Multipipe Workstations
+\f1\b0 \expnd0\expndtw0\kerning0
+ are an affordable way to scale the rendering performance and display size. Equalizer applications can exploit multiple processors and multiple graphic cards by running multiple rendering threads.}</string>
 			</dict>
 			<key>TextPlacement</key>
 			<integer>0</integer>
@@ -1104,16 +1158,18 @@ Scalable Rendering
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>3</integer>
+	<integer>6</integer>
 	<key>ImageLinkBack</key>
 	<array>
+		<dict/>
 		<dict/>
 		<dict/>
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image3.png</string>
 		<string>image1.JPG</string>
-		<string>image2.pdf</string>
+		<string>image5.JPG</string>
 	</array>
 	<key>IsPalette</key>
 	<string>NO</string>
@@ -1213,7 +1269,7 @@ Scalable Rendering
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-01-03 14:59:42 +0100</string>
+	<string>2007-04-04 17:22:03 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
