--- a/Presentations/Flyer.graffle/data.plist
+++ b/Presentations/Flyer.graffle/data.plist
@@ -31,6 +31,36 @@
 	<array>
 		<dict>
 			<key>Bounds</key>
+			<string>{{325.984, 269.291}, {184.252, 64.2441}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>ID</key>
+			<integer>852</integer>
+			<key>ImageID</key>
+			<integer>76</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+		</dict>
+		<dict>
+			<key>Bounds</key>
 			<string>{{581.102, 127.559}, {240.945, 325.984}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
@@ -1330,55 +1360,8 @@
 			<integer>819</integer>
 		</dict>
 		<dict>
-			<key>AllowConnections</key>
-			<string>NO</string>
 			<key>Bounds</key>
-			<string>{{297.638, 184.252}, {240.945, 14.1732}}</string>
-			<key>Class</key>
-			<string>ShapedGraphic</string>
-			<key>HFlip</key>
-			<string>YES</string>
-			<key>ID</key>
-			<integer>815</integer>
-			<key>Shape</key>
-			<string>Rectangle</string>
-			<key>Style</key>
-			<dict>
-				<key>fill</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>shadow</key>
-				<dict>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-				<key>stroke</key>
-				<dict>
-					<key>CornerRadius</key>
-					<real>4</real>
-					<key>Draws</key>
-					<string>NO</string>
-				</dict>
-			</dict>
-			<key>Text</key>
-			<dict>
-				<key>Pad</key>
-				<integer>0</integer>
-				<key>Text</key>
-				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
-{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa40\qc\pardirnatural
-
-\f0\fs20 \cf0 \expnd0\expndtw0\kerning0
-Sponsored by:}</string>
-			</dict>
-		</dict>
-		<dict>
-			<key>Bounds</key>
-			<string>{{340.157, 212.598}, {155.905, 73.2756}}</string>
+			<string>{{354.331, 184.252}, {127.559, 59.953}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>ID</key>
@@ -2134,9 +2117,10 @@ Equalizer supports virtually any recomposition algorithm, for example binary swa
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>76</integer>
+	<integer>77</integer>
 	<key>ImageLinkBack</key>
 	<array>
+		<dict/>
 		<dict/>
 		<dict/>
 		<dict/>
@@ -2156,6 +2140,7 @@ Equalizer supports virtually any recomposition algorithm, for example binary swa
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image76.tif</string>
 		<string>image10.png</string>
 		<string>image3.pdf</string>
 		<string>image65.rgb</string>
@@ -2271,7 +2256,7 @@ Equalizer supports virtually any recomposition algorithm, for example binary swa
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-04-04 16:49:11 +0200</string>
+	<string>2007-04-04 18:30:27 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
