--- a/Presentations/images/directSend.graffle/data.plist
+++ b/Presentations/images/directSend.graffle/data.plist
@@ -699,7 +699,7 @@ tiles}</string>
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
 \f0\fs18 \cf0 composite\
-read-back}</string>
+readback}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -886,7 +886,7 @@ read-back}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{399.697, 107.434}, {51, 11}}</string>
+			<string>{{401.197, 107.434}, {48, 11}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FitText</key>
@@ -939,7 +939,7 @@ read-back}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc\pardirnatural
 
-\f0\fs18 \cf0 read-back}</string>
+\f0\fs18 \cf0 readback}</string>
 			</dict>
 		</dict>
 		<dict>
@@ -2394,13 +2394,13 @@ read-back}</string>
 	</array>
 	<key>ImageList</key>
 	<array>
-		<string>image12.rgb</string>
-		<string>image15.tiff</string>
-		<string>image16.tiff</string>
-		<string>image17.tiff</string>
 		<string>image18.tiff</string>
+		<string>image17.tiff</string>
+		<string>image16.tiff</string>
+		<string>image15.tiff</string>
 		<string>image14.rgb</string>
 		<string>image13.rgb</string>
+		<string>image12.rgb</string>
 	</array>
 	<key>IsPalette</key>
 	<string>NO</string>
@@ -2500,7 +2500,7 @@ read-back}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2006-12-18 16:05:06 +0100</string>
+	<string>2007-04-10 18:56:28 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -2567,25 +2567,17 @@ read-back}</string>
 	<key>WindowInfo</key>
 	<dict>
 		<key>CurrentSheet</key>
-		<string>0</string>
-		<key>DrawerOpen</key>
-		<false/>
+		<integer>0</integer>
 		<key>DrawerTab</key>
 		<string>Outline</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
-		<key>FitInWindow</key>
-		<true/>
 		<key>Frame</key>
 		<string>{{441, 1}, {1079, 877}}</string>
-		<key>ShowRuler</key>
-		<false/>
-		<key>ShowStatusBar</key>
-		<true/>
 		<key>VisibleRegion</key>
 		<string>{{0, -11}, {682, 499.321}}</string>
 		<key>Zoom</key>
-		<string>1.300098</string>
+		<real>1.3000977039337158</real>
 	</dict>
 </dict>
 </plist>
